feat: add h1, photo, name, contacts blocks

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>My CV</h1>
+<div class="photo">
+    <h2>My photo</h2>
+    <img src="72450306.png" alt="avatar">
+</div>
+<div class="name">
+    <h2>My name</h2>
+    <p>Pavel Gagarin</p>
+</div>
+<div class="contacts">
+    <h2>Contacts</h2>
+    <p>My email is ufufhby74@gmail.com.</p>
+</div>
 
 </body>
 </html>
