feat: add about-me, skills, code

--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
     <h2>Contacts</h2>
     <p>My email is ufufhby74@gmail.com.</p>
 </div>
+<div class="aboutMe">
+    <h2>About me</h2>
+    <p>I live in Mogilev. In this moment i'm 18 years old. I don't have work experience. In future i wish become a frontend developer and work with angular or react.</p>
+</div>
+<div class="skills">
+    <h2>Skills</h2>
+    <p>I know the basics of JavaScript, HTML, CSS, C#, SQL.</p>
+</div>
+<div class="code">
+    <h2>Code</h2>
+    <pre>
+    static void Main(string[] args)
+    {
+        Console.WriteLine("Enter name");
+        String name = Console.ReadLine();
+        Console.WriteLine("Hello World " +name);
+        Console.WriteLine("Enter lastname");
+        String lastname = Console.ReadLine();
+        Console.WriteLine("Hello World " +name+"  "+lastname+" ");
+        Console.ReadLine();
+    }
+</pre>
+</div>
 
 </body>
 </html>
