feat: add work-experience, education, english blocks

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
     }
 </pre>
 </div>
-
+<div class="workExperience">
+    <h2>Work experience</h2>
+    <p>I don't have work experience.</p>
+</div>
+<div class="Education">
+    <h2>Education</h2>
+    <p>I don't have some special education.</p>
+</div>
+<div class="English">
+    <h2>English</h2>
+    <p>My English level is A2.</p>
+</div>
 </body>
 </html>
