--- a/index.html
+++ b/index.html
@@ -8,28 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My CV</h1>
-<div class="photo">
+    <header>
+        <h1>My CV</h1>
+        <span>My CV for rs school task</span>
+    </header>
+    <main>
+<section class="photo">
     <h2>My photo</h2>
     <img src="72450306.png" alt="avatar">
-</div>
-<div class="name">
+</section>
+<section class="name">
     <h2>My name</h2>
     <p>Pavel Gagarin</p>
-</div>
-<div class="contacts">
+</section>
+<section class="contacts">
     <h2>Contacts</h2>
     <p>My email is ufufhby74@gmail.com.</p>
-</div>
-<div class="aboutMe">
+</section>
+<section class="aboutMe">
     <h2>About me</h2>
     <p>I live in Mogilev. In this moment i'm 18 years old. I don't have work experience. In future i wish become a frontend developer and work with angular or react.</p>
-</div>
-<div class="skills">
+</section>
+<section class="skills">
     <h2>Skills</h2>
     <p>I know the basics of JavaScript, HTML, CSS, C#, SQL.</p>
-</div>
-<div class="code">
+</section>
+<section class="code">
     <h2>Code</h2>
     <pre>
     static void Main(string[] args)
@@ -43,18 +47,20 @@
         Console.ReadLine();
     }
 </pre>
-</div>
-<div class="workExperience">
+</section>
+<section class="workExperience">
     <h2>Work experience</h2>
     <p>I don't have work experience.</p>
-</div>
-<div class="Education">
+</section>
+<section class="Education">
     <h2>Education</h2>
     <p>I don't have some special education.</p>
-</div>
-<div class="English">
+</section>
+<section class="English">
     <h2>English</h2>
     <p>My English level is A2.</p>
-</div>
+</section>
+</main>
+
 </body>
 </html>
