feat: add footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <main>
 <section class="photo">
     <h2>My photo</h2>
-    <img src="72450306.png" alt="avatar">
+    <figure>
+        <img src="72450306.png" alt="avatar">
+        <figcaption>My avatar from GitHub</figcaption>
+     </figure>
 </section>
 <section class="name">
     <h2>My name</h2>
@@ -61,6 +64,14 @@
     <p>My English level is A2.</p>
 </section>
 </main>
-
+<footer>
+    <div class="date-and-logo">
+        <a class="git" href="https://github.com/GodlyCat">My GitHub</a>
+        <a href="" class="logo">
+            <img src="rs_school_js.svg" alt="rs_school_js_logo" style="width: 300px; height: 100px;">
+        </a>
+    </div>
+    <p class="date">2021</p>
+</footer>
 </body>
 </html>
