add: marked lists

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,38 +8,51 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>My CV</h1>
         <span>My CV for rs school task</span>
     </header>
     <main>
-<section class="photo">
-    <h2>My photo</h2>
-    <figure>
-        <img src="72450306.png" alt="avatar">
-        <figcaption>My avatar from GitHub</figcaption>
-     </figure>
-</section>
-<section class="name">
-    <h2>My name</h2>
-    <p>Pavel Gagarin</p>
-</section>
-<section class="contacts">
-    <h2>Contacts</h2>
-    <p>My email is ufufhby74@gmail.com.</p>
-</section>
-<section class="aboutMe">
-    <h2>About me</h2>
-    <p>I live in Mogilev. In this moment i'm 18 years old. I don't have work experience. In future i wish become a frontend developer and work with angular or react.</p>
-</section>
-<section class="skills">
-    <h2>Skills</h2>
-    <p>I know the basics of JavaScript, HTML, CSS, C#, SQL.</p>
-</section>
-<section class="code">
-    <h2>Code</h2>
-    <pre>
+        <section class="photo">
+            <h2>My photo</h2>
+            <figure>
+                <img src="72450306.png" alt="avatar">
+                <figcaption>My avatar from GitHub</figcaption>
+            </figure>
+        </section>
+        <section class="name">
+            <h2>My name</h2>
+            <p>Pavel Gagarin</p>
+        </section>
+        <section class="contacts">
+            <h2>Contacts</h2>
+            <ul>
+                <li>email: ufufhby74@gmail.com.</li>
+                <li>phone: +3753366666666</li>
+                <li>discord: GodlyCat#2734</li>
+            </ul>
+        </section>
+        <section class="aboutMe">
+            <h2>About me</h2>
+            <p>I live in Mogilev. In this moment i'm 18 years old. I don't have work experience. In future i wish become
+                a frontend developer and work with angular or react.</p>
+        </section>
+        <section class="skills">
+            <h2>Skills</h2>
+            <p>I know the basics of:</p>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+                <li>C#</li>
+                <li>SQL</li>
+            </ul>
+        </section>
+        <section class="code">
+            <h2>Code</h2>
+            <pre>
     static void Main(string[] args)
     {
         Console.WriteLine("Enter name");
@@ -50,28 +64,29 @@
         Console.ReadLine();
     }
 </pre>
-</section>
-<section class="workExperience">
-    <h2>Work experience</h2>
-    <p>I don't have work experience.</p>
-</section>
-<section class="Education">
-    <h2>Education</h2>
-    <p>I don't have some special education.</p>
-</section>
-<section class="English">
-    <h2>English</h2>
-    <p>My English level is A2.</p>
-</section>
-</main>
-<footer>
-    <div class="date-and-logo">
-        <a class="git" href="https://github.com/GodlyCat">My GitHub</a>
-        <a href="" class="logo">
-            <img src="rs_school_js.svg" alt="rs_school_js_logo" style="width: 300px; height: 100px;">
-        </a>
-    </div>
-    <p class="date">2021</p>
-</footer>
+        </section>
+        <section class="workExperience">
+            <h2>Work experience</h2>
+            <p>I don't have work experience.</p>
+        </section>
+        <section class="Education">
+            <h2>Education</h2>
+            <p>I don't have some special education.</p>
+        </section>
+        <section class="English">
+            <h2>English</h2>
+            <p>My English level is A2.</p>
+        </section>
+    </main>
+    <footer>
+        <div class="date-and-logo">
+            <a class="git" href="https://github.com/GodlyCat">My GitHub</a>
+            <a href="https://rs.school/js/" class="logo">
+                <img src="rs_school_js.svg" alt="rs_school_js_logo" style="width: 300px; height: 100px;">
+            </a>
+        </div>
+        <p class="date">2021</p>
+    </footer>
 </body>
+
 </html>
