fix: change span to h6

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>My CV</h1>
-        <span>My CV for rs school task</span>
+        <h6>My CV for rs school task</h6>
     </header>
     <main>
         <section class="photo">
